--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Elidiana Andrade | Portfolio para o Lab da DIO</title>
-  <meta name="description" content="Portfólio da desenvolvedora front-end Elidiana Andrade para compartilhar projetos e habilidades desenvolvidas.">
+  <title>Rodrigo Lopes | Portfolio para o Lab da DIO</title>
+  <meta name="description" content="Portfólio da desenvolvedora front-end Rodrigo Lopes para compartilhar projetos e habilidades desenvolvidas.">
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -19,11 +19,11 @@
             <span class="menu__text">Home</span>
           </a>
         </li>
-        <li class="menu__item">
+        <!-- <li class="menu__item">
           <a class="menu__link" href="#projetos">
             <span class="menu__text">Projetos</span>
           </a>
-        </li>
+        </li> -->
         <li class="menu__item">
           <a class="menu__link" href="#sobre">
             <span class="menu__text">Sobre</span>
@@ -53,12 +53,12 @@
           <span class="menu__text">Home</span>
         </a>
       </li>
-      <li class="menu__item">
+      <!-- <li class="menu__item">
         <a class="menu__link" href="#projetos">
           <i class="menu__icon bi bi-window-stack"></i>
           <span class="menu__text">Projetos</span>
         </a>
-      </li>
+      </li> -->
       <li class="menu__item">
         <a class="menu__link" href="#sobre">
           <i class="menu__icon bi bi-person"></i>
@@ -77,15 +77,15 @@
   <main id="home">
     <div class="main__content1">
       <h1><b>Soluções Criativas &</b> Desenvolvimento Front-end</h1>
-      <p>Elidiana Andrade, Salvador-BA, Desenvolvedora e Instrutora Front-end.</p> 
+      <p>Rodrigo Lopes, São Paulo-SP, estudando de desenvolvimento Front-end e Back-End</p> 
       <ul class="menu menu--social">
         <li>
-          <a class="menu__link" href="https://github.com/elidianaandrade" target="_blank">
+          <a class="menu__link" href="https://github.com/rodrls" target="_blank">
             <i class="menu__icon bi bi-github"></i>
           </a>
         </li>
         <li>
-          <a class="menu__link" href="https://www.linkedin.com/in/elidianaandrade/" target="_blank">
+          <a class="menu__link" href="https://www.linkedin.com/in/rodrigolss/" target="_blank">
             <i class="menu__icon bi bi-linkedin"></i>
           </a>
         </li>
@@ -95,37 +95,37 @@
           </a>
         </li>
       </ul>
-      <a href="#projetos">
+      <!-- <a href="#projetos">
         <button class="btn btn--primary">
           <span>Ver Projetos</span>
           <i class="bi bi-arrow-down-right"></i>
         </button>  
-      </a>
+      </a> -->
     </div>
-    <div class="main__content2">
+    <!-- <div class="main__content2">
       <iframe src="https://www.youtube.com/embed/HXKz2-Sohfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+    </div> -->
   </main>
 
   <section class="technologies">
     <h2>Conhecimento nas principais tecnologias do mercado</h2>
     <ul class="technologies__list">
       <li class="technologies__item">
-        <img class="technologies__logo" src="assets/images/technologies/Angular.svg" alt="Logo Angular">
+        <img class="technologies__logo" src="assets/images/technologies/java.jpg" alt="Logo Java">
       </li>
       <li class="technologies__item">
-        <img class="technologies__logo" src="assets/images/technologies/TypeScript.svg" alt="Logo TypeScript">
+        <img class="technologies__logo" src="assets/images/technologies/javascript.png" alt="Logo JavaScript">
       </li>
       <li class="technologies__item">
-        <img class="technologies__logo" src="assets/images/technologies/Bootstrap.svg" alt="Logo Bootstrap">
+        <img class="technologies__logo" src="assets/images/technologies/solidity.jpg" alt="Logo solidity">
       </li>
       <li class="technologies__item">
-        <img class="technologies__logo" src="assets/images/technologies/SASS.svg" alt="Logo SASS">
+        <img class="technologies__logo" src="assets/images/technologies/spring.jpg" alt="Logo Spring">
       </li>
     </ul>
   </section>
 
-  <section id="projetos" class="projects">
+  <!-- <section id="projetos" class="projects">
     <h2>Projetos</h2>
     <div class="projects__container">
       <div class="projects__card">
@@ -162,8 +162,8 @@
             </button>  
           </div>
         </div>
-      </div>
-      <div class="projects__card card--reverse">
+      </div> -->
+      <!-- <div class="projects__card card--reverse">
         <img class="card__cover" src="assets/images/projects/archstil.jpg" alt="Capa Archstil">
         <div class="card__body">
           <h3 class="card__title">Archstil Blog</h3>
@@ -197,8 +197,8 @@
             </button>  
           </div>
         </div>
-      </div>
-      <div class="projects__card">
+      </div> -->
+      <!-- <div class="projects__card">
         <img class="card__cover" src="assets/images/projects/games-store.jpg" alt="Capa Games Store">
         <div class="card__body">
           <h3 class="card__title">Games Store</h3>
@@ -232,8 +232,8 @@
             </button>  
           </div>
         </div>
-      </div>
-      <a href="https://github.com/elidianaandrade">
+      </div> -->
+      <a href="https://github.com/rodrls">
         <button class="btn btn--primary">
           <span>Ver Todos os Projetos</span>
           <i class="bi bi-arrow-up-right"></i>
@@ -247,24 +247,24 @@
       <img class="about__photo" src="assets/images/avatar.jpg" alt="">
       <div class="about__description">
         <h2>Sobre mim</h2>
-        <p>Elidiana Andrade. Apaixonada por artes e tecnologia, meu primeiro "Hello World" foi na pré-adolescência quando tive contato com HTML, CSS e um pouco de JavaScript e Notepad++. Atualmente curso especialização em Desenvolvimento de Software com Metodologias Ágeis e atuo como instrutora e desenvolvedora freelance.
+        <p>Rodrigo Lopes, 27 anos. Meu primeiro "Hello World" foi na pré-adolescência quando tive contato com HTML, CSS e um pouco Visual Basic. Atualmente trabalho como analista de ERP(suporte ao clientes), e estou cursando Desenvolvendo back-end e front-end atraves da plataforma de estudos da Digital Inovation One. Pretendo migrar de area e adquirir experiencia com desenvolvimento de softwares.
         </p>  
         <div class="about__icons">
           <i class="bi bi-translate"></i>
           <span>Inglês: Intermediário | Espanhol: Básico</span>
         </div>
         <div class="description__buttons">
-          <a href="https://www.linkedin.com/in/elidianaandrade/" target="_blank">
+          <a href="https://www.linkedin.com/in/rodrigolss/" target="_blank">
             <button class="btn btn--primary">
               <span>Conecte-se Comigo</span>
               <i class="bi bi-arrow-up-right"></i>
             </button> 
           </a>
-          <a href="">
+          <!-- <a href="">
             <button class="btn">
               <span>Currículo</span>
             </button>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -272,29 +272,29 @@
       <div class="col1">
         <div class="row1">
           <h3>Formação</h3>
-          <h4>Desenvolvimento de Software com Metodologia Ágil</h4>
-          <span>Abr 2023 - Atualmente</span>
+          <h4>Ciencia da Computação</h4>
+          <span>Fev 2017 - Agosto 2021</span>
           <div class="about__icons">
             <i class="bi bi-bank"></i>
-            <span>Universidade Salvador</span>
+            <span>Universidade Paulista UNIP</span>
           </div>
           <div class="about__icons">
             <i class="bi bi-mortarboard"></i>
-            <span>Pós-graduação Lato Sensu - Especialização</span>
+            <span>Analise e Desenvolvimento de Sistemas - Tecnico </span>
           </div>
         </div>
         <div class="row2">
           <h3>Experiências</h3>
-          <h4>Instrutora</h4>
-          <span>Digital Innovation One. Fev 2023 - Atualmente</span>
-          <span>Produção de conteúdos educacionais direcionados a 
-            alunos iniciantes que desejam construir uma base no Desenvolvimento Front-end.
+          <h4>Analista de suporte</h4>
+          <span>LinkedBy Control. Jan 2021 - Atualmente</span>
+          <span>Analisar processos/regras de negócio e prestar suporte ao usuário no sistema ERP Control. Registrar
+            procedimentos e atender ao SLA.
           </span>
-          <ul class="about__list">
+          <!-- <ul class="about__list">
             <li class="about__item">Elaboração de ementas;</li>
             <li class="about__item">Ministração de aulas assíncronas;</li>
             <li class="about__item">Produção de materiais complementares.</li>
-          </ul>
+          </ul> -->
         </div>
       </div>
       <div class="col2">
@@ -302,47 +302,53 @@
         <div id="accordion">
           <div class="accordion__item active">
             <button class="accordion__header start">
-              <span>Versionamento de Código com Git e GitHub</span>
+              <span>Back-End Java com Spring</span>
               <i class="bi bi-caret-down-fill"></i>
             </button>
             <div class="accordion__body">
               <p>
-                Digital Innovation One. Fev 2023. 2h.
+                Digital Innovation One. Jun - Set 2024. 78h.
               </p>
-              <p>
-                O que é versionamento de código, Git e GitHub. Como instalar e configurar o Git em diferentes sistemas 
-                operacionais e como autenticar via Token e SSH. Como manusear repositórios, indo desde a criação e clonagem 
-                até o gerenciamento de branches, passando por todas as etapas de salvar, desfazer e sincronizar alterações 
-                com o repositório remoto. 
-              </p>
+              <ul>
+                <li>Princípios de Desenvolvimento de Software Colaborativo</li>
+                <li>Dominando a Linguagem de Programação Java</li>
+                <li>Programação Orientada a Objetos com Java</li>
+                <li>Testes e Gerenciamento de Dependências em Projetos Java</li>
+                <li>Banco de Dados SQL e NoSQL Para Desenvolvedores Back-end</li>
+                <li>Ganhando Produtividade com Spring Framework e Java</li>
+                <li>Soft Skills na Era Ágil: Conectando Pessoas e Oportunidades</li>
+              </ul>
             </div>
           </div>
           <div class="accordion__item">
             <button class="accordion__header">
-              <span>Contribuindo em um Projeto Open Source no GitHub</span>
+              <span>Binance - Blockchain Developer with Solidity</span>
               <i class="bi bi-caret-down-fill"></i>
             </button>
             <div class="accordion__body">
               <p>
-                Digital Innovation One. Fev 2023. 1h.
+                Digital Innovation One. Set - Nov 2024. 54h.
               </p>
-              <p>
-                Lab prático sobre colaboração em projetos de código aberto.
-              </p>
+              <ul>
+                <li>Princípios e conceitos de Blockchain</li>
+                <li>Linguagem Solidity para implementação de contratos inteligentes</li>
+                <li>Criação da sua própria criptomoeda na Rede Ethereum e um NFT temático.</li>
+              </ul>
             </div>
           </div>
           <div class="accordion__item">
             <button class="accordion__header end">
-              <span>Organizando seus Estudos com os Roadmaps DIO e o Notion</span>
+              <span>Front-end do Zero</span>
               <i class="bi bi-caret-down-fill"></i>
             </button>
             <div class="accordion__body end">
               <p>
-                Digital Innovation One. Fev 2023. 2h.
+                Digital Innovation One. Out - Dez 2024. 75h.
               </p>
-              <p>
-                Otimização dos estudos com os Roadmaps DIO, construindo um caderno de estudos com a ferramenta Notion.
-              </p>
+              <ul>
+                <li>Fundamentos do HTML, CSS e JAVASCRIPT</li>
+                <li>Páginas web responsivas e dinâmicas </li>         
+              </ul>
             </div>
           </div>
         </div>
@@ -355,13 +361,13 @@
     </p>
     <ul class="menu menu--social">
       <li>
-        <a class="menu__link" href="https://github.com/elidianaandrade" target="_blank">
+        <a class="menu__link" href="https://github.com/rodrls" target="_blank">
           <i class="menu__icon bi bi-github"></i>
           <span>GitHub</span>
         </a>
       </li>
       <li>
-        <a class="menu__link" href="https://www.linkedin.com/in/elidianaandrade/" target="_blank">
+        <a class="menu__link" href="https://www.linkedin.com/in/rodrigolss/" target="_blank">
           <i class="menu__icon bi bi-linkedin"></i>
           <span>LinkedIn</span>
         </a>
@@ -373,16 +379,16 @@
         </a>
       </li>
     </ul>
-    <a href="mailto:elidianaandrade@outlook.com">
+    <a href="mailto:rodrigolss@yahoo.com.com">
       <button class="btn btn--primary">
-        <span class="email">elidianaandrade@outlook.com</span>
+        <span class="email">rodrigolss@yahoo.com</span>
       </button>  
     </a>
   </section>
 
   <footer>
     <p>
-      © 2023. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
+      © 2024. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
       <a href="https://www.dio.me/" target="_blank">Digital Innovation One</a> por 
       <a href="https://github.com/elidianaandrade" target="_blank">Elidiana Andrade</a>.
     </p>
